@@ -16,12 +16,10 @@
 package io.gravitee.repository.noop.management;
 
 import io.gravitee.common.data.domain.Page;
-import io.gravitee.repository.exceptions.TechnicalException;
 import io.gravitee.repository.management.api.EventRepository;
 import io.gravitee.repository.management.api.search.EventCriteria;
 import io.gravitee.repository.management.api.search.Pageable;
 import io.gravitee.repository.management.model.Event;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -41,22 +39,25 @@ public class NoOpEventRepository extends AbstractNoOpManagementRepository<Event,
     }
 
     @Override
-    public Event createOrPatch(Event event) throws TechnicalException {
+    public Event createOrPatch(Event event) {
         return null;
     }
 
     @Override
-    public long deleteApiEvents(String apiId) throws TechnicalException {
+    public long deleteApiEvents(String apiId) {
         return 0;
     }
 
     @Override
     public List<Event> findByEnvironmentId(String environmentId) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     public List<Event> findByOrganizationId(String organizationId) {
-        return Collections.emptyList();
+        return List.of();
     }
+
+    @Override
+    public void cleanupGatewayEvents(String environmentId, int keepRecordsCount) {}
 }
